Changed the template a bit Added link names Fixed dropdown bug on mobile

--- a/BlankCordovaApp1/www/css/jasny-bootstrap.css
+++ b/BlankCordovaApp1/www/css/jasny-bootstrap.css
@@ -176,7 +176,7 @@
   margin-bottom: 10px;
 }
 .navmenu-nav.dropdown-menu {
-  position: static;
+  position: relative;
   float: none;
   padding-top: 0;
   margin: 0;
